# redfish-monitor

./: Cargo.toml
src/: args.rs  main.rs
