[package]
name = "redfish-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
ratatui = "0.29"
crossterm = "0.29"
chrono = "0.4.41"
